@@ -1,3 +1,12 @@
+2008-05-21  Siraj Razick  <siraj.razick@collabora.co.uk>
+
+        Reviewed by Simon.
+
+        Add <param name="classid"/> support for application/x-qt-object plugins
+
+        * WebCoreSupport/FrameLoaderClientQt.cpp:
+        (WebCore::FrameLoaderClientQt::createPlugin):
+
 2008-05-13  Andy Shaw  <andy@trolltech.com>
 
         Reviewed by Simon.
